feat: 更新用户登录接口返回结构，添加登录结果详细信息
